// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utilisateursQueryModify Vérifie l'écriture de la requête sur un utilisateur 1`] = `
Object {
  "administration": Object {
    "activitesTypes": Array [],
    "id": "aut-97300-01",
    "titresTypes": Array [
      Object {
        "archive": null,
        "associee": true,
        "contenuIds": Array [
          Object {
            "elementId": "mecanise",
            "sectionId": "arm",
          },
          Object {
            "elementId": "franchissements",
            "sectionId": "arm",
          },
        ],
        "domaineId": "m",
        "gestionnaire": null,
        "id": "arm",
        "typeId": "ar",
      },
    ],
  },
  "administrationId": "aut-97300-01",
  "dateCreation": "2022-05-12",
  "email": "utilisateurEmail",
  "entreprises": Array [],
  "id": "utilisateurId",
  "modification": true,
  "nom": "utilisateurNom",
  "permissionModification": true,
  "preferences": null,
  "prenom": null,
  "qgisToken": null,
  "role": "editeur",
  "suppression": true,
  "telephoneFixe": null,
  "telephoneMobile": null,
}
`;

exports[`utilisateursQueryModify Vérifie l'écriture de la requête sur un utilisateur 2`] = `
Object {
  "administration": Object {
    "activitesTypes": Array [],
    "id": "aut-97300-01",
    "titresTypes": Array [
      Object {
        "archive": null,
        "associee": true,
        "contenuIds": Array [
          Object {
            "elementId": "mecanise",
            "sectionId": "arm",
          },
          Object {
            "elementId": "franchissements",
            "sectionId": "arm",
          },
        ],
        "domaineId": "m",
        "gestionnaire": null,
        "id": "arm",
        "typeId": "ar",
      },
    ],
  },
  "administrationId": "aut-97300-01",
  "dateCreation": "2022-05-12",
  "email": "utilisateurEmail",
  "entreprises": Array [],
  "id": "utilisateurId",
  "modification": true,
  "nom": "utilisateurNom",
  "permissionModification": true,
  "preferences": null,
  "prenom": null,
  "qgisToken": null,
  "role": "editeur",
  "suppression": true,
  "telephoneFixe": null,
  "telephoneMobile": null,
}
`;

exports[`utilisateursQueryModify Vérifie l'écriture de la requête sur un utilisateur 3`] = `
Object {
  "administration": Object {
    "activitesTypes": Array [],
    "id": "aut-97300-01",
    "titresTypes": Array [
      Object {
        "archive": null,
        "associee": true,
        "contenuIds": Array [
          Object {
            "elementId": "mecanise",
            "sectionId": "arm",
          },
          Object {
            "elementId": "franchissements",
            "sectionId": "arm",
          },
        ],
        "domaineId": "m",
        "gestionnaire": null,
        "id": "arm",
        "typeId": "ar",
      },
    ],
  },
  "administrationId": "aut-97300-01",
  "dateCreation": "2022-05-12",
  "email": "utilisateurEmail",
  "entreprises": Array [],
  "id": "utilisateurId",
  "modification": false,
  "nom": "utilisateurNom",
  "permissionModification": false,
  "preferences": null,
  "prenom": null,
  "qgisToken": null,
  "role": "editeur",
  "suppression": false,
  "telephoneFixe": null,
  "telephoneMobile": null,
}
`;

exports[`utilisateursQueryModify Vérifie l'écriture de la requête sur un utilisateur 4`] = `
Object {
  "administration": Object {
    "activitesTypes": Array [],
    "id": "aut-97300-01",
    "titresTypes": Array [
      Object {
        "archive": null,
        "associee": true,
        "contenuIds": Array [
          Object {
            "elementId": "mecanise",
            "sectionId": "arm",
          },
          Object {
            "elementId": "franchissements",
            "sectionId": "arm",
          },
        ],
        "domaineId": "m",
        "gestionnaire": null,
        "id": "arm",
        "typeId": "ar",
      },
    ],
  },
  "administrationId": "aut-97300-01",
  "dateCreation": "2022-05-12",
  "email": "utilisateurEmail",
  "entreprises": Array [],
  "id": "utilisateurId",
  "modification": false,
  "nom": "utilisateurNom",
  "permissionModification": false,
  "preferences": null,
  "prenom": null,
  "qgisToken": null,
  "role": "editeur",
  "suppression": false,
  "telephoneFixe": null,
  "telephoneMobile": null,
}
`;

exports[`utilisateursQueryModify Vérifie l'écriture de la requête sur un utilisateur 5`] = `
Object {
  "administration": Object {
    "activitesTypes": Array [],
    "id": "aut-97300-01",
    "titresTypes": Array [
      Object {
        "archive": null,
        "associee": true,
        "contenuIds": Array [
          Object {
            "elementId": "mecanise",
            "sectionId": "arm",
          },
          Object {
            "elementId": "franchissements",
            "sectionId": "arm",
          },
        ],
        "domaineId": "m",
        "gestionnaire": null,
        "id": "arm",
        "typeId": "ar",
      },
    ],
  },
  "administrationId": "aut-97300-01",
  "dateCreation": "2022-05-12",
  "email": "utilisateurEmail",
  "entreprises": Array [],
  "id": "utilisateurId",
  "modification": false,
  "nom": "utilisateurNom",
  "permissionModification": false,
  "preferences": null,
  "prenom": null,
  "qgisToken": null,
  "role": "editeur",
  "suppression": false,
  "telephoneFixe": null,
  "telephoneMobile": null,
}
`;
